--- a/client/src/components/FriendList/friendlist.css
+++ b/client/src/components/FriendList/friendlist.css
@@ -1,6 +1,19 @@
 button {
     margin: 5px;
-};
+    padding: 10px 20px;
+    background-color: #2f243a;
+    color: #0dab76;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 0 10px rgba(13, 171, 118, 0.5); /* Glowing shadow effect */
+}
+
+button:hover {
+    background-color: #0056b3;
+    box-shadow: 0 0 20px rgba(13, 171, 118, 0.8); 
+}
+
 
 /* this is not making my modal custom :(  */
 #modal-custom {
