--- a/client/src/pages/Roll/style/Roll2.css
+++ b/client/src/pages/Roll/style/Roll2.css
@@ -7,6 +7,8 @@
   background: linear-gradient(45deg, #603696, #80d6ff, #0dab76, #007bff);
   background-size: 400% 400%;
   animation: gradientFlow 5s ease infinite;
+  font-family: "Vast Shadow", serif;
+  text-shadow: 0 1px 1px #0dab76, 0 1px 1px #007bff, 0 1px 1px #0dab76;
 }
 
 @keyframes gradientFlow {
