--- a/client/src/pages/Roll/style/Roll2.css
+++ b/client/src/pages/Roll/style/Roll2.css
@@ -4,6 +4,7 @@
   background-color: #603696;
   padding: 10%;
   height: auto;
+  width: 100%;
   background: linear-gradient(45deg, #603696, #80d6ff, #0dab76, #007bff);
   background-size: 400% 400%;
   animation: gradientFlow 5s ease infinite;
