--- a/client/src/components/Footer/footer.css
+++ b/client/src/components/Footer/footer.css
@@ -8,6 +8,12 @@
   bottom: 0;
   left: 0;
   width: 100%;
+  font-weight: 100;
+  font-style: normal;
+  font-size: large;
+  font-family: "Vast Shadow", serif;
+  letter-spacing: 5px;
+  text-shadow: 0 0.5px 0.25px #0dab76, 0 0.75px 0.5px #007bff;
 }
 
 /* Adjustments for responsiveness */
