--- a/client/src/pages/Roll/style/Roll2.css
+++ b/client/src/pages/Roll/style/Roll2.css
@@ -2,6 +2,7 @@
 .dice-roller {
   text-align: center;
   background-color: #603696;
+  width: 100%;
   padding: 10%;
   height: auto;
   background: linear-gradient(45deg, #603696, #80d6ff, #0dab76, #007bff);
@@ -38,6 +39,11 @@
   align-items: center;
 }
 
+select {
+  background-color: #603696;
+}
+
+
 .dice-wrapper {
   position: relative;
   width: auto;
@@ -67,7 +73,7 @@
 
 button {
   font-size: 1rem;
-  background-color: green;
+  background-color: #0dab76;
   padding: 10px;
   color: white;
   border: none;
@@ -82,7 +88,34 @@ button:disabled {
 
 button:active {
   transform: scale(0.9);
+  background: linear-gradient(45deg, var(--primary-color), var(--secondary-color), var(--accent-color), var(--primary-color));
+  background-size: 400% 400%;
+  animation: gradientFlow 1s cubic-bezier(0.25, 0.1, 0.25, 1);
+  box-shadow: 0 0 20px var(--hover-shadow-color);
 }
+
+.die-btn {
+  animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both infinite;
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translateX(-1px);
+  }
+  
+  20%, 80% {
+    transform: translateX(2px);
+  }
+
+  30%, 50%, 70% {
+    transform: translateX(-4px);
+  }
+
+  40%, 60% {
+    transform: translateX(4px);
+  }
+}
+
 
 /* DICE ANIMATION */
 .roll-animation {
