--- a/client/src/pages/Roll/style/roll4.css
+++ b/client/src/pages/Roll/style/roll4.css
@@ -39,6 +39,11 @@
   align-items: center;
 }
 
+select {
+  background-color: rgba(96, 54, 150, 0.3);
+}
+
+
 .dice-wrapper {
   position: relative;
   width: auto;
@@ -68,7 +73,7 @@
 
 button {
   font-size: 1rem;
-  background-color: purple;
+  background-color: #603696;
   padding: 10px;
   color: white;
   border: none;
@@ -83,6 +88,32 @@ button:disabled {
 
 button:active {
   transform: scale(0.9);
+  background: linear-gradient(45deg, var(--primary-color), var(--secondary-color), var(--accent-color), var(--primary-color));
+  background-size: 400% 400%;
+  animation: gradientFlow 1s cubic-bezier(0.25, 0.1, 0.25, 1);
+  box-shadow: 0 0 20px var(--hover-shadow-color);
+}
+
+.die-btn {
+  animation: shake 5s cubic-bezier(0.36, 0.07, 0.19, 0.97) both
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translateX(-1px);
+  }
+  
+  20%, 80% {
+    transform: translateX(2px);
+  }
+
+  30%, 50%, 70% {
+    transform: translateX(-4px);
+  }
+
+  40%, 60% {
+    transform: translateX(4px);
+  }
 }
 
 /* DICE ANIMATION */
