--- a/client/src/pages/Landing/style/landing1.css
+++ b/client/src/pages/Landing/style/landing1.css
@@ -1,8 +1,26 @@
+h1 {
+  text-align: center;
+}
+
+input {
+  background-color: rgba(0, 123, 255, 0.5);
+  text-align: center;
+  border-color: rgba(13, 171, 118. 0.3);
+}
 .landing-page {
   position: relative; /* Ensure content is positioned relative to this container */
   width: 100%;
   padding: 20px;
   overflow: hidden; /* Prevent any overflow from animations */
+  font-family: "Vast Shadow", serif;
+  text-shadow: 0 1px 1px #0dab76, 0 1px 1px #007bff, 0 1px 1px #0dab76;
+  text-align: center;
+}
+
+.image-overlay {
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(96, 54, 150, 0.5);
 }
 
 .landing-page::before,
@@ -48,9 +66,11 @@ display: flex;
 flex-direction: column;
 width: 50%;
 padding: 10px;
+margin: 0 auto;
 }
 
 .dice-container {
+  
   position: absolute;
   top: 0;
   left: 0;
@@ -182,13 +202,14 @@ padding: 10px;
 }
 
 button {
-  font-size: 1rem;
-  background-color: #007bff;
-  padding: 10px;
-  color: white;
+  margin: 5px;
+  padding: 10px 20px;
+  background-color: #2f243a;
+  color: #0dab76;
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  box-shadow: 0 0 10px rgba(13, 171, 118, 0.5); /* Glowing shadow effect */
 }
 
 button:disabled {
