landing style update for user list to not make the page look correct

--- a/client/src/pages/Landing/style/landing1.css
+++ b/client/src/pages/Landing/style/landing1.css
@@ -15,6 +15,7 @@ input {
   font-family: "Vast Shadow", serif;
   text-shadow: 0 1px 1px #0dab76, 0 1px 1px #007bff, 0 1px 1px #0dab76;
   text-align: center;
+  height: 100%;
 }
 
 .image-overlay {
@@ -67,6 +68,7 @@ flex-direction: column;
 width: 50%;
 padding: 10px;
 margin: 0 auto;
+max-height: 50%;
 }
 
 .dice-container {
