--- a/client/src/pages/UserProfile/userProfile.css
+++ b/client/src/pages/UserProfile/userProfile.css
@@ -62,6 +62,7 @@
   grid-template-rows: 2fr 1fr 3fr;
   gap: 20px;
   margin-top: 10px;
+  height: 50%;
 }
 
 h1 {
@@ -208,6 +209,7 @@ h1 {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     gap: 10px;
+    
   }
   .profile-title {
     font-size: 1.2em;
