--- a/client/src/pages/Roll/style/Roll2.css
+++ b/client/src/pages/Roll/style/Roll2.css
@@ -99,6 +99,12 @@ button:active {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both infinite;
 }
 
+.daily-btn{
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 @keyframes shake {
   10%, 90% {
     transform: translateX(-1px);
