--- a/client/src/pages/Roll/style/roll4.css
+++ b/client/src/pages/Roll/style/roll4.css
@@ -98,6 +98,12 @@ button:active {
   animation: shake 5s cubic-bezier(0.36, 0.07, 0.19, 0.97) both
 }
 
+.daily-btn{
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
 @keyframes shake {
   10%, 90% {
     transform: translateX(-1px);
