--- a/client/src/pages/Roll/style/Roll1.css
+++ b/client/src/pages/Roll/style/Roll1.css
@@ -97,12 +97,26 @@ button:active {
 .die-btn {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both infinite;
 }
-
-.daily-btn{
+.row-button {
+  position: absolute;
+  top: 0;
+}
+/* .daily-btn{
   position: absolute;
   top: 0;
   right: 0;
 }
+
+.challenge-btn{
+  position: absolute;
+  top: 0;
+}
+
+.your-challenge-btn{
+  position: absolute;
+  top:0;
+  left:0;
+} */
 
 @keyframes shake {
   10%, 90% {
