--- a/client/src/pages/Roll/style/Roll3.css
+++ b/client/src/pages/Roll/style/Roll3.css
@@ -100,11 +100,16 @@ button:active {
   animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both infinite;
 }
 
-.daily-btn{
+.row-button {
+  position: absolute;
+  top: 0;
+}
+
+/* .daily-btn{
   position: absolute;
   top: 0;
   right: 0;
-}
+} */
 
 @keyframes shake {
   10%, 90% {
