--- a/client/src/pages/Roll/style/Roll3.css
+++ b/client/src/pages/Roll/style/Roll3.css
@@ -76,7 +76,7 @@ button {
   font-size: 1rem;
   background-color: yellow;
   padding: 10px;
-  color: white;
+  color: black;
   border: none;
   border-radius: 4px;
   cursor: pointer;
